tests/semantic_cases/invalid/end_name_mismatch.ob0
(* INVALID: module END name does not match MODULE name *)
MODULE Main;
VAR x: INTEGER;
BEGIN
  x := 1;
END NotMain.
